--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Sriracha&display=swap');
 body {
-    font-family: 'Roboto mono', monospace;
+    font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
+}
+h2, h3, h4{
+    font-family: 'Sriracha', cursive;
+    color:#117583;
 }
 .home-body {
 
@@ -15,7 +19,7 @@ body {
 a {
     text-decoration: none;
     display: inline;
-    color: black
+    color: #117583;
 }
 .grid-container {
     max-width: 980px;
@@ -31,7 +35,7 @@ header .header-icons-container {
     width: 100%;
     height: 50px;
     display: grid;
-    background-color: #47cfac;
+    background-color: #117583;
 }
 header .header-icons-container .icons {
     width: 300px;
@@ -96,7 +100,7 @@ nav .profile-link a {
 .home-main-button {
     width: 110px;
     height: 50px;
-    background: #47cfac;
+    background: #7ca8ad;
     display: grid;
     align-items: center;
 }
@@ -138,7 +142,7 @@ nav .profile-link a {
     text-align: center;
 }
 .blogs-button {
-    border: 1px solid #47cfac;
+    border: 1px solid #117583;
     padding: 10px 15px;
     font-size: 12px;
 }
@@ -158,12 +162,20 @@ footer {
     width: 100%;
     height: 80px;
     background-color: #22272d;
-    border-top: 35px solid #47cfac;
+    border-top: 35px solid #117583;
     text-align: center;
 }
 footer p {
     color: white;
     margin-top: 35px;
+}
+.footer-img{
+    margin-top:20px;
+    width:10%;
+}
+.footer-text{
+    margin-top:-10px;
+    color:#fff
 }
 .blogpost-img-container {
     padding: 0 50px 40px;
@@ -180,7 +192,9 @@ footer p {
 .blogpost-main-container article h1 {
     font-size: 35px;
 }
-
+.container-center{
+    margin: 50px 150px 100px 150px;
+}
 .contact-main-container {
     width: 100%;
     min-height: 250px;
@@ -229,5 +243,6 @@ footer p {
     grid-template-columns: 1fr 1fr 1fr;
 }
 .projects-container {
-    padding: 0 5px;
+    padding: 20px 20px;
+    text-align:justify;
 }
